@@ -8,6 +8,7 @@
 #include <windows.h>
 #include <process.h>
 #include <stdlib.h>
+#include <shlwapi.h>
 
 #include "ml-base.h"
 #include "ml-values.h"
@@ -24,7 +25,7 @@
  *       call. This is for the time being only used by CML.
  *       It could also cause problems later on.
  */
-ml_val_t _ml_win32_PS_create_process(ml_state_t *msp, ml_val_t arg)
+ml_val_t _ml_win32_PS_create_process_internal(ml_state_t *msp, ml_val_t arg, STARTUPINFO *pStartup)
 {
   char *str = STR_MLtoC(arg);
   PROCESS_INFORMATION pi;
@@ -33,7 +34,11 @@ ml_val_t _ml_win32_PS_create_process(ml_state_t *msp, ml_val_t arg)
   BOOL fSuccess;
   ZeroMemory (&si,sizeof(si));
   si.cb = sizeof(si);
-  fSuccess = CreateProcess (NULL,str,NULL,NULL,FALSE,0,NULL,NULL,&si,&pi);
+
+  if (pStartup == NULL) {
+    pStartup = &si;
+  }
+  fSuccess = CreateProcess (NULL,str,NULL,NULL,TRUE,CREATE_NEW_CONSOLE,NULL,NULL,pStartup,&pi);
   if (fSuccess) {
     HANDLE hProcess = pi.hProcess;
     CloseHandle (pi.hThread);
@@ -42,6 +47,48 @@ ml_val_t _ml_win32_PS_create_process(ml_state_t *msp, ml_val_t arg)
   }
   WORD_ALLOC (msp,res,(Word_t)0);
   return res;
+}
+
+ml_val_t _ml_win32_PS_create_process(ml_state_t *msp, ml_val_t arg)
+{
+    return _ml_win32_PS_create_process_internal(msp, arg, NULL);
+}
+
+ml_val_t _ml_win32_PS_create_process_redirect_handles(ml_state_t *msp, ml_val_t arg)
+{
+    SECURITY_ATTRIBUTES sa;
+    SECURITY_DESCRIPTOR sd;               //security information for pipes
+    STARTUPINFO si;
+    HANDLE hStdoutRd, hStdoutWr, hStdinRd, hStdinWr = NULL;
+    ml_val_t res,procHandle,in,out;
+
+    InitializeSecurityDescriptor(&sd,SECURITY_DESCRIPTOR_REVISION);
+    SetSecurityDescriptorDacl(&sd, TRUE, NULL, FALSE);
+    sa.lpSecurityDescriptor = &sd;
+    sa.nLength = sizeof(SECURITY_ATTRIBUTES);
+    sa.bInheritHandle = TRUE;
+
+    ZeroMemory(&si, sizeof(si));
+    si.cb = sizeof(si);
+
+    // Create a pipe for the child process's STDOUT. 
+    if (!CreatePipe(&hStdoutRd, &hStdoutWr, &sa, 0)) 
+        return RAISE_SYSERR(msp,-1);
+
+    // Create a pipe for the child process's STDIN. 
+    if (!CreatePipe(&hStdinRd, &hStdinWr, &sa, 0)) 
+        return RAISE_SYSERR(msp,-1);
+
+    si.dwFlags = STARTF_USESTDHANDLES|STARTF_USESHOWWINDOW;
+    si.wShowWindow = SW_HIDE;
+    si.hStdInput = hStdinRd; // The child process READS from this
+    si.hStdOutput = si.hStdError = hStdoutWr; // And it WRITES to this one
+
+    procHandle = _ml_win32_PS_create_process_internal(msp, arg, &si);
+    WORD_ALLOC(msp, in, (Word_t)hStdoutRd);
+    WORD_ALLOC(msp, out, (Word_t)hStdinWr);
+    REC_ALLOC3(msp, res, procHandle, in, out);
+    return res;
 }
 
 ml_val_t _ml_win32_PS_wait_for_single_object(ml_state_t *msp, ml_val_t arg)
@@ -120,5 +167,57 @@ ml_val_t _ml_win32_PS_sleep (ml_state_t *msp, ml_val_t arg)
   Sleep ((DWORD) WORD_MLtoC(arg));
   return ML_unit;
 }
+
+
+ml_val_t _ml_win32_PS_find_executable(ml_state_t *msp, ml_val_t arg)
+{
+  Byte_t *fileName = STR_MLtoC(arg);
+  TCHAR szResultPath[MAX_PATH];
+  int length;
+  ml_val_t res, vec, obj;
+  BOOL found = FALSE;
+
+  strcpy_s(szResultPath, max(strlen(fileName), MAX_PATH-1), fileName);
+  found = PathFindOnPath(szResultPath, NULL);
+
+  if (!found) {
+    return OPTION_NONE;
+  }
+
+  length = strlen(szResultPath);
+  vec = ML_AllocRaw32 (msp, BYTES_TO_WORDS (length + 1));
+  strcpy_s(PTR_MLtoC(void, vec), length+1, szResultPath);
+  SEQHDR_ALLOC (msp, obj, DESC_string, vec, length);
+  OPTION_SOME(msp, res, obj);
+  return res;
+}
+
+ml_val_t _ml_win32_PS_launch_application(ml_state_t *msp, ml_val_t arg)
+{
+  Byte_t *fileName = STR_MLtoC(REC_SEL(arg,0));
+  Byte_t *argument = STR_MLtoC(REC_SEL(arg,1));
+
+  int result = (int)ShellExecute(NULL, NULL, fileName, argument, NULL, SW_SHOWNORMAL);
+
+  if (result < 32) {
+    return RAISE_SYSERR(msp,-1);
+  }
+
+  return ML_unit;
+}
+
+ml_val_t _ml_win32_PS_open_document(ml_state_t *msp, ml_val_t arg)
+{
+  Byte_t *document = STR_MLtoC(arg);
+
+  int result = (int)ShellExecute(NULL, NULL, document, NULL, NULL, SW_SHOWNORMAL);
+
+  if (result < 32) {
+    return RAISE_SYSERR(msp,-1);
+  }
+
+  return ML_unit;
+}
+
 
 /* end of win32-process.c */
